feat: P3 finance trx budget sub
